--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "KinexonTable",
-  "version": "0.0.1",
-  "description": "An amazing Budibase component!",
+  "name": "bb-component-SuperTable",
+  "version": "1.0.23-beta",
+  "description": "A Fully Customizable Budibase Table Component with Superpowers !",
+  "author": "Michael Poirazi",
   "license": "MIT",
   "svelte": "index.js",
   "module": "dist/plugin.min.js",
@@ -11,6 +12,9 @@
   },
   "dependencies": {
     "@crownframework/svelte-error-boundary": "^1.0.3",
+    "@spectrum-css/icon": "^3.0.32",
+    "@spectrum-css/table": "^4.0.24",
+    "@spectrum-css/vars": "^8.0.3",
     "svelte": "^3.49.0"
   },
   "devDependencies": {
