create testing release "lief"

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bb-component-KinexonTable",
-  "version": "1.0.25",
+  "version": "1.0.25_lief_testing",
   "description": "A Fully Customizable Kinexon Table Component with Superpowers !",
   "author": "Max Bernstetter",
   "license": "MIT",
